fix scrollbar

--- a/api-gateway/gateway/static/styles/style.css
+++ b/api-gateway/gateway/static/styles/style.css
@@ -18,7 +18,7 @@
 
 html{
     font-size: 62.5%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     scroll-behavior: smooth;
     scroll-padding-top: 7rem;
 }
